src/components/AboutSection/AboutSection.scss
.about-us-section-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  width: 100%;
  height: 867px;
  background-color: rgba(250, 250, 250, 1);

  .about-us-content-container {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-start;
    padding: 24px 25px 48px 24px;

    .about-us-logo-container {
    }

    .app-stores-container {
      $app-stores-border-width: 0.5px;
      $app-stores-border-color: rgba(0, 0, 0, 1);
      $app-stores-border-texture: solid;
      $app-stores-border-radius: 10px;
      $app-stores-container-horizontal-padding: 12px;
      $app-stores-container-vertical-padding: 7px;
      $app-stores-container-gap: 7px;

      display: flex;
      flex-direction: column;
      align-items: flex-start;
      justify-content: flex-start;
      width: 180px;
      height: 120px;
      gap: 16px;

      .apple-store-container,
      .google-play-store-container {
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: center;
        border: $app-stores-border-width $app-stores-border-texture;
        border-color: $app-stores-border-color;
        border-radius: $app-stores-border-radius;
        padding: $app-stores-container-vertical-padding
          $app-stores-container-horizontal-padding;
        gap: $app-stores-container-gap;

        .apple-icon {
          width: 24px;
          height: 31px;
        }
        .google-play-icon {
          width: 19px;
          height: 25px;
        }
      }

      .apps-text-container {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        width: 130px;
        height: 36px;

        .apps-top-text {
          font-size: 13.7px;
          font-weight: 400;
          line-height: 18px;
          letter-spacing: 1.2899999618530273px;
          text-align: center;
          height: 18px;
        }
        .apps-bottom-text {
          height: 20px;
          font-size: 16px;
          font-weight: 400;
          line-height: 20px;
          letter-spacing: 1.2899999618530273px;
          text-align: center;
        }
      }
    }

    .would-be-replaced-with-header-component {
      display: flex;
      flex-direction: row;
      justify-content: flex-start;
      align-items: flex-start;

      font-size: 18px;
      line-height: 35px;
      letter-spacing: 1.25px;
    }

    .about-us-descriptions-container {
      display: flex;
      flex-direction: column;
      align-items: flex-start;
      justify-content: flex-start;
      font-size: 18px;
      line-height: 28px;
      letter-spacing: 2.140000104904175px;

      .about-us-description-top-text {
        width: 331px;
        height: 280px;
      }
      .about-us-description-bottom-text {
        width: 306px;
        height: 168px;
      }
    }
  }
}

